# job-market-ml-service

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_data_preprocessing.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_evaluation.ipynb
service/: app.py
service/api/: predict.py
service/schemas/: request.py  response.py
service/services/: feature_builder.py  model_loader.py  predictor.py
src/data/: feature_engineering.py  load.py  preprocessing.py
src/models/: evaluate.py  registry.py  salary_predictor.py  train.py
src/utils/: metrics.py
